Add light and dark themes

--- a/index.html
+++ b/index.html
@@ -8,10 +8,11 @@
 </head>
 <body>
     <div class="main">
+        <button id="theme_change" class="button_light">Change Theme</button>
         <div id="error_place"></div>
-        <div class="task">
-            <textarea placeholder="Write new task here" id="textarea"></textarea>
-            <button id="new_task_button">Add new task</button>
+        <div class="task_light">
+            <textarea placeholder="Write new task here" id="textarea" class="textarea_light"></textarea>
+            <button id="new_task_button" class="button_light">Add new task</button>
             </div>
             <div id="task_list"></div>
             </div>
