--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="styles.css">
     <title>ToDo List</title>
 </head>
-<body>
+<body class="body_light" id="body">
     <div class="main">
         <button id="theme_change" class="button_light">Change Theme</button>
         <div id="error_place"></div>
